<resources>
    <string name="app_name">Mobile Bus Ticketing System</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>


    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_tools">Tools</string>
    <string name="menu_share">Share</string>
    <string name="menu_send">Send</string>
    <string name="login_string">Login</string>
    <string name="login_input_hint">Your Email or Mobile Number</string>
    <string name="password_hint">Password</string>
    <string name="balance">Balance</string>
    <string name="accountBalance">Account Balance</string>
    <string name="addCredit">Add Credit</string>
    <string name="continue_">OK</string>
</resources>
