<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Login">

    <EditText
        android:id="@+id/editText"
        android:layout_width="@dimen/textInputWidth"
        android:layout_height="@dimen/textInputHeight"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="@dimen/Input_field_layout_margin_Left_Right"
        android:layout_marginTop="@dimen/input_field_layout_marginTop"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="@dimen/Input_field_layout_margin_Left_Right"
        android:ems="10"
        android:inputType="textPersonName"
        android:text="@string/login_input_hint"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.492"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/editText2"
        android:layout_width="@dimen/textInputWidth"
        android:layout_height="@dimen/textInputHeight"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="@dimen/Input_field_layout_margin_Left_Right"
        android:layout_marginTop="@dimen/input_field_layout_marginTop"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="@dimen/Input_field_layout_margin_Left_Right"
        android:hint="@string/password_hint"
        android:ems="10"
        android:inputType="textPassword"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.469"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editText" />

    <Button
        android:id="@+id/button"
        android:layout_width="@dimen/textInputWidth"
        android:layout_height="@dimen/textInputHeight"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="@dimen/Input_field_layout_margin_Left_Right"
        android:layout_marginTop="@dimen/input_field_layout_marginTop"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="@dimen/Input_field_layout_margin_Left_Right"
        android:text="@string/login_string"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editText2" />


</androidx.constraintlayout.widget.ConstraintLayout>